--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "eas-build-pre-install": "npm config set registry https://registry.npmjs.org/"
   },
   "dependencies": {
     "@brentvatne/growersbenb-private": "^1.0.0",
